--- a/render.yaml
+++ b/render.yaml
@@ -1,12 +1,8 @@
 services:
   - type: web
     name: ksl-scraper
-    env: node
+    env: docker
     plan: free
-    buildCommand: ./render-build.sh
-    startCommand: node server.js
-    runtime: docker
     envVars:
       - key: NODE_ENV
         value: production
-    dockerfilePath: Dockerfile
